MAPREDUCE-1435. Fix symlink handling in task work directory when cleaning up, essentially to avoid following links. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@919268 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -412,6 +412,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1512. RAID uses HarFileSystem directly instead of
     FileSystem.get (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1435. Fix symlink handling in task work directory when
+    cleaning up, essentially to avoid following links.
+    (Ravi Gummadi via yhemanth)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
