MAPREDUCE-1408. Add customizable job submission policies to Gridmix. Contributed by Rahul Singh
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@919277 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -200,6 +200,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1454. Quote user supplied strings in Tracker servlets. (cdouglas)
 
+    MAPREDUCE-1408. Add customizable job submission policies to Gridmix. (Rahul
+    Singh via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
