MAPREDUCE-1527. Better warning logged when mapred.queue.names is overshadowed by mapred-queues.xml. Contributed by Hong Tang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@919330 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -203,6 +203,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1408. Add customizable job submission policies to Gridmix. (Rahul
     Singh via cdouglas)
 
+    MAPREDUCE-1527. Better warning logged when mapred.queue.names is
+    overshadowed by mapred-queues.xml. (Hong Tang via acmurthy) 
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
