--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1350,3 +1350,6 @@ Release 0.21.0 - Unreleased
     cdouglas)
 
     MAPREDUCE-1251. c++ utils doesn't compile. (Eli Collins via tomwhite)
+
+    MAPREDUCE-1522. FileInputFormat may use the default FileSystem for the
+    input path. (Tsz Wo (Nicholas), SZE via cdouglas)
