MAPREDUCE-1493. Authorization for job-history pages. Contributed by Vinod Kumar Vavilapalli.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@920250 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1385. Use the new UserGroupInformation from HADOOP-6299.
     (ddas via omalley)
 
+    MAPREDUCE-1493. Authorization for job-history pages. (vinodkv)
+
   NEW FEATURES
 
     MAPREDUCE-1383. Automates fetching of delegation tokens in File*Formats
