MAPREDUCE-1573. TestStreamingAsDifferentUser fails if run as tt_user. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@920751 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -427,6 +427,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1518. RaidNode does not run the deletion check on the
     directory that stores the parity files.  (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1573. TestStreamingAsDifferentUser fails if run as tt_user.
+    (Ravi Gummadi via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
