MAPREDUCE-1306. Randomize the arrival of heartbeat responses in Mumak. Contributed by Tamas Sarlos
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@921670 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -440,6 +440,9 @@ Trunk (unreleased changes)
     with non-deletable permissions are created within it.
     (Amar Kamat via yhemanth)
 
+    MAPREDUCE-1306. Randomize the arrival of heartbeat responses in Mumak.
+    (Tamas Sarlos via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
