MAPREDUCE-1403. Save the size and number of distributed cache artifacts in the configuration. Contributed by Arun Murthy
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@921780 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -206,7 +206,10 @@ Trunk (unreleased changes)
     Singh via cdouglas)
 
     MAPREDUCE-1527. Better warning logged when mapred.queue.names is
-    overshadowed by mapred-queues.xml. (Hong Tang via acmurthy) 
+    overshadowed by mapred-queues.xml. (Hong Tang via acmurthy)
+
+    MAPREDUCE-1403. Save the size and number of distributed cache artifacts in
+    the configuration. (Arun Murthy via cdouglas)
 
   OPTIMIZATIONS
 
