MAPREDUCE-1579. archive: check and possibly replace the space charater in source paths.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@922395 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1379,3 +1379,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-890. After HADOOP-4491, the user who started mapred system is 
     not able to run job. (Ravi Gummadi via vinodkv)
+
+    MAPREDUCE-1579. archive: check and possibly replace the space charater
+    in source paths.  (szetszwo)
