--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -211,6 +211,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1403. Save the size and number of distributed cache artifacts in
     the configuration. (Arun Murthy via cdouglas)
 
+    MAPREDUCE-1482. Truncate state string and diagnostic information in
+    TaskStatus. (Amar Kamat via szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
