MAPREDUCE-1536. DataDrivenDBInputFormat does not split date columns correctly. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@924910 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -454,6 +454,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1579. archive: check and possibly replace the space charater
     in source paths.  (szetszwo)
 
+    MAPREDUCE-1536. DataDrivenDBInputFormat does not split date columns correctly.
+    (Aaron Kimball via enis)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
