MAPREDUCE-1593.  [Rumen] Improvements to random seed generation (tamas via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@924991 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -214,6 +214,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1482. Truncate state string and diagnostic information in
     TaskStatus. (Amar Kamat via szetszwo)
 
+    MAPREDUCE-1593.  [Rumen] Improvements to random seed generation (tamas via
+    mahadev)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
