MAPREDUCE-1460. Oracle support in DataDrivenDBInputFormat. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@925442 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -220,6 +220,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1593.  [Rumen] Improvements to random seed generation (tamas via
     mahadev)
 
+    MAPREDUCE-1460. Oracle support in DataDrivenDBInputFormat.
+    (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
