MAPREDUCE-1508. Protect against NPE in TestMultipleLevelCaching. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@925554 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -471,6 +471,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1615. Fix compilation of TestSubmitJob. (cdouglas)
 
+    MAPREDUCE-1508. Protect against NPE in TestMultipleLevelCaching. (Aaron
+    Kimball via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
