MAPREDUCE-1569. Pass configuration through mocked contexts in MRUnit. Contributed by Chris White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@925558 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -223,6 +223,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1460. Oracle support in DataDrivenDBInputFormat.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1569. Pass configuration through mocked contexts in MRUnit.
+    (Chris White via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
