MAPREDUCE-1497. Suppress spurious findbugs warning about IndexCache synchronization. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@925559 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -477,6 +477,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1508. Protect against NPE in TestMultipleLevelCaching. (Aaron
     Kimball via cdouglas)
 
+    MAPREDUCE-1497. Suppress spurious findbugs warning about IndexCache
+    synchronization. (Amareshwari Sriramadasu via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
