MAPREDUCE-1420. Fix TestTTResourceReporting failure. Contributed by Scott Chen
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@925561 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -480,6 +480,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1497. Suppress spurious findbugs warning about IndexCache
     synchronization. (Amareshwari Sriramadasu via cdouglas)
 
+    MAPREDUCE-1420. Fix TestTTResourceReporting failure. (Scott Chen via
+    cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
