MAPREDUCE-1480. Correctly initialize child RecordReaders in CombineFileInputFormat. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@926411 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -483,6 +483,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1420. Fix TestTTResourceReporting failure. (Scott Chen via
     cdouglas)
 
+    MAPREDUCE-1480. Correctly initialize child RecordReaders in
+    CombineFileInputFormat. (Aaron Kimball via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
