MAPREDUCE-1348. Fix block forensics packaging. Contributed by Tom White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@926449 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -486,6 +486,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1480. Correctly initialize child RecordReaders in
     CombineFileInputFormat. (Aaron Kimball via cdouglas)
 
+    MAPREDUCE-1348. Fix block forensics packaging. (Tom White via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
