MAPREDUCE-1590. Move HarFileSystem from Hadoop Common to Mapreduce tools. (mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@927187 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -226,6 +226,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1569. Pass configuration through mocked contexts in MRUnit.
     (Chris White via cdouglas)
 
+    MAPREDUCE-1590. Move HarFileSystem from Hadoop Common to Mapreduce tools.
+    (mahadev)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
