--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -232,6 +232,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1629. Get rid of fakeBlockLocations() on HarFileSystem, since
     it's not used (mahadev)
 
+    MAPREDUCE-1489. DataDrivenDBInputFormat should not query the database
+    when generating only one split. (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
