MAPREDUCE-1628. HarFileSystem shows incorrect replication numbers and permissions (tsz via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@929656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -497,6 +497,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1348. Fix block forensics packaging. (Tom White via cdouglas)
 
+    MAPREDUCE-1628. HarFileSystem shows incorrect replication numbers and
+    permissions (tsz via mahadev)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
