--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -498,7 +498,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1348. Fix block forensics packaging. (Tom White via cdouglas)
 
     MAPREDUCE-1628. HarFileSystem shows incorrect replication numbers and
-    permissions (tsz via mahadev)
+    permissions.  (szetszwo via mahadev)
+
+    MAPREDUCE-1602. Fix the error message for the case that src does not
+    exist.  (szetszwo)
 
 Release 0.21.0 - Unreleased
 
