MAPREDUCE-1514.  Add documentation on replication, permissions, new options, limitations and internals of har.  Contributed by mahadev
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@930088 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -235,6 +235,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1489. DataDrivenDBInputFormat should not query the database
     when generating only one split. (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1514.  Add documentation on replication, permissions, new options,
+    limitations and internals of har.  (mahadev via szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
