MAPREDUCE-1428.  Make block size and the size of archive created files configurable.  Contributed by mahadev
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@930318 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -238,6 +238,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1514.  Add documentation on replication, permissions, new options,
     limitations and internals of har.  (mahadev via szetszwo)
 
+    MAPREDUCE-1428.  Make block size and the size of archive created files
+    configurable.  (mahadev via szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
