MAPREDUCE-1656. JobStory should provide queue info. (hong via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@930423 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -241,6 +241,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1428.  Make block size and the size of archive created files
     configurable.  (mahadev via szetszwo)
 
+    MAPREDUCE-1656. JobStory should provide queue info. (hong via mahadev)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
