MAPREDUCE-1585. Create Hadoop Archives version 2 with filenames URL-encoded (rodrigo via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@931274 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -511,6 +511,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1602. Fix the error message for the case that src does not
     exist.  (szetszwo)
 
+    MAPREDUCE-1585. Create Hadoop Archives version 2 with filenames
+    URL-encoded (rodrigo via mahadev)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
