--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -243,6 +243,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1656. JobStory should provide queue info. (hong via mahadev)
 
+    MAPREDUCE-1466. Record number of files processed in FileInputFormat in the
+    Configuration for offline analysis. (Luke Lu and Arun Murthy via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
