--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -519,6 +519,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1585. Create Hadoop Archives version 2 with filenames
     URL-encoded (rodrigo via mahadev)
 
+    MAPREDUCE-1523. Sometimes rumen trace generator fails to extract the job
+    finish time. (dick king via mahadev)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
