MAPREDUCE-1635. ResourceEstimator does not work after MAPREDUCE-842. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@933252 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -522,6 +522,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1523. Sometimes rumen trace generator fails to extract the job
     finish time. (dick king via mahadev)
 
+    MAPREDUCE-1635. ResourceEstimator does not work after MAPREDUCE-842.
+    (Amareshwari Sriramadasu via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
