MAPREDUCE-889. binary communication formats added to Streaming by HADOOP-1722 should be documented. Contributed by Klaas Bosteels.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@933440 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -525,6 +525,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1635. ResourceEstimator does not work after MAPREDUCE-842.
     (Amareshwari Sriramadasu via vinodkv)
 
+    MAPREDUCE-889. binary communication formats added to Streaming by
+    HADOOP-1722 should be documented. (Klaas Bosteels via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
