--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -248,6 +248,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1466. Record number of files processed in FileInputFormat in the
     Configuration for offline analysis. (Luke Lu and Arun Murthy via cdouglas)
 
+    MAPREDUCE-1538. TrackerDistributedCacheManager manages the
+    number of files. (Scott Chen via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
