MAPREDUCE-1062. Fix ReliabilityTest to work with retired jobs. Contributed by Sreekanth Ramakrishnan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@935427 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -537,6 +537,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1692. Removed unused testcase TestStreamedMerge.
     (Sreekanth Ramakrishnan and Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-1062. Fix ReliabilityTest to work with retired jobs. (Sreekanth
+    Ramakrishnan via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
