MAPREDUCE-1409. IOExceptions thrown from FIleOutputCommitter::abortTask should cause the task to fail. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@936042 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -540,6 +540,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1062. Fix ReliabilityTest to work with retired jobs. (Sreekanth
     Ramakrishnan via cdouglas)
 
+    MAPREDUCE-1409. IOExceptions thrown from FIleOutputCommitter::abortTask
+    should cause the task to fail. (Amareshwari Sriramadasu via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
