--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -251,6 +251,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1538. TrackerDistributedCacheManager manages the
     number of files. (Scott Chen via dhruba)
 
+    MAPREDUCE-1673. Scripts to start and stop RaidNode.
+    (Rodrigo Schmidt via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
