MAPREDUCE-1659. RaidNode writes temp files on configured tmp directory and add random numbers to their names to avoid conflicts (Rodrigo Schmidt via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@936159 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -254,6 +254,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1673. Scripts to start and stop RaidNode.
     (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1659. RaidNode writes temp files on configured tmp directory and
+    add random numbers to their names to avoid conflicts
+    (Rodrigo Schmidt via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
