MAPREDUCE-1221. Allow admins to control physical memory limits per-task and per-node. Contributed by Scott Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@936166 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -258,6 +258,9 @@ Trunk (unreleased changes)
     add random numbers to their names to avoid conflicts
     (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1221. Allow admins to control physical memory limits per-task
+    and per-node. (Scott Chen via acmurthy) 
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
