--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -556,6 +556,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1695. Include capacity scheduler in findbugs and javadoc-dev
     targets and also fix existing warnings. (Hong Tang via yhemanth)
 
+    MAPREDUCE-1494. Ensure TestJobDirCleanup verifies the correct paths.
+    (Amareshwari Sriramadasu via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
