MAPREDUCE-1065. Update mapred tutorial to use the new API. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@937736 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -261,6 +261,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1221. Allow admins to control physical memory limits per-task
     and per-node. (Scott Chen via acmurthy) 
 
+    MAPREDUCE-1065. Update mapred tutorial to use the new API. (Aaron Kimball
+    via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
