MAPREDUCE-1304. Add a task counter tracking time spent in GC. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@937737 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -264,6 +264,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1065. Update mapred tutorial to use the new API. (Aaron Kimball
     via cdouglas)
 
+    MAPREDUCE-1304. Add a task counter tracking time spent in GC. (Aaron
+    Kimball via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
