MAPREDUCE-1570. Add grouping comparators to MRUnit. Contributed by Chris White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@937871 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -267,6 +267,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1304. Add a task counter tracking time spent in GC. (Aaron
     Kimball via cdouglas)
 
+    MAPREDUCE-1570. Add grouping comparators to MRUnit. (Chris White via
+    cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
