MAPREDUCE-1622. Include missing slf4j dependencies.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@937873 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -568,6 +568,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1494. Ensure TestJobDirCleanup verifies the correct paths.
     (Amareshwari Sriramadasu via cdouglas)
 
+    MAPREDUCE-1622. Include missing slf4j dependencies. (cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
