MAPREDUCE-1219. Remove job level metrics from jobtracker metrics to ease undue load on jobtracker. Contributed by Sreekanth Ramakrishnan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@937924 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -576,6 +576,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1618. Add missing javadoc to JobStatus::*JobAcls. (Amareshwari
     Sriramadasu via cdouglas)
 
+    MAPREDUCE-1219. Remove job level metrics from jobtracker metrics to ease 
+    undue load on jobtracker. (Sreekanth Ramakrishnan via sharad)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
