MAPREDUCE-1650. Exclude Private elements from generated MapReduce Javadoc.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938135 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -270,6 +270,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1570. Add grouping comparators to MRUnit. (Chris White via
     cdouglas)
 
+    MAPREDUCE-1650. Exclude Private elements from generated MapReduce
+    Javadoc. (tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
