MAPREDUCE-1625. Improve grouping of packages in Javadoc.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938249 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -273,6 +273,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1650. Exclude Private elements from generated MapReduce
     Javadoc. (tomwhite)
 
+    MAPREDUCE-1625. Improve grouping of packages in Javadoc. (tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
