MAPREDUCE-1705. Archiving and Purging of HDFS parity files should handle globbed policies accurately. (Rodrigo Schmidt via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938282 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -590,6 +590,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1604. Add Forrest documentation for Job ACLs.
     (Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-1705. Archiving and Purging of HDFS parity files should 
+    handle globbed policies accurately. (Rodrigo Schmidt via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
