MAPREDUCE-1612. job conf file is not accessible from job history web page. Contributed by Ravi Gummadi and Sreekanth Ramakrishnan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938324 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -593,6 +593,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1705. Archiving and Purging of HDFS parity files should 
     handle globbed policies accurately. (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1612. job conf file is not accessible from job history web page.
+    (Ravi Gummadi and Sreekanth Ramakrishnan via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
