MAPREDUCE-1397. NullPointerException observed during task failures. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938385 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -596,6 +596,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1612. job conf file is not accessible from job history web page.
     (Ravi Gummadi and Sreekanth Ramakrishnan via vinodkv)
 
+    MAPREDUCE-1397. NullPointerException observed during task failures.
+    (Amareshwari Sriramadasu via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
