MAPREDUCE-1728. Oracle timezone strings do not match Java. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938576 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -599,6 +599,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1397. NullPointerException observed during task failures.
     (Amareshwari Sriramadasu via vinodkv)
 
+    MAPREDUCE-1728. Oracle timezone strings do not match Java.
+    (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
