MAPREDUCE-1657. After task logs directory is deleted, tasklog servlet displays wrong error message about job ACLs. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@938797 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -605,6 +605,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1609. TaskTracker.localizeJob should not set permissions on 
     job log directory recursively. (Amareshwari Sriramadasu via vinodkv)
 
+    MAPREDUCE-1657. After task logs directory is deleted, tasklog servlet 
+    displays wrong error message about job ACLs. (Ravi Gummadi via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
