MAPREDUCE-1417. Forrest documentation should be updated to reflect the changes in MAPREDUCE-744. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@939217 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -275,6 +275,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1625. Improve grouping of packages in Javadoc. (tomwhite)
 
+    MAPREDUCE-1417. Forrest documentation should be updated to reflect 
+    the changes in MAPREDUCE-744. (Ravi Gummadi via vinodkv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
