MAPREDUCE-1568. TrackerDistributedCacheManager should clean up cache in a background thread. (Scott Chen via zshao)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@939505 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -278,6 +278,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1417. Forrest documentation should be updated to reflect 
     the changes in MAPREDUCE-744. (Ravi Gummadi via vinodkv)
 
+    MAPREDUCE-1568. TrackerDistributedCacheManager should clean up cache
+    in a background thread. (Scott Chen via zshao)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
